tests/good/simple_block_with_locals.mil
function main () {
	x = 5;
	print(x);
	[local x];
	{
		x = 10;
		print(x);	
	}
	print(x);
}