tests/bad/negation_for_not_int.mil
function main(){
	a = true;
	x = -a;
}